webphere support
svn path=/projects/container-test-framework/trunk/; revision=21345